--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -37,33 +37,27 @@
             <div class="sidebar-wrapper">
                 <ul class="nav">
                     <li class="active">
-                        <a href="dashboard.html">
-                            <i class="material-icons">dashboard</i>
-                            <p>Dashboard</p>
+                        <a href="/descubre">
+                            <i class="material-icons">bubble_chart</i>
+                            <p>Descubre</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./user.html">
-                            <i class="material-icons">person</i>
-                            <p>User Profile</p>
+                        <a href="/lideres">
+                            <i class="material-icons">group</i>
+                            <p>Líderes</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./table.html">
-                            <i class="material-icons">content_paste</i>
-                            <p>Table List</p>
+                        <a href="/instituciones">
+                            <i class="material-icons">business</i>
+                            <p>Instituciones</p>
                         </a>
                     </li>
                     <li>
                         <a href="./typography.html">
                             <i class="material-icons">library_books</i>
                             <p>Typography</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="./icons.html">
-                            <i class="material-icons">bubble_chart</i>
-                            <p>Icons</p>
                         </a>
                     </li>
                     <li>
