UI casos y medios

--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -55,21 +55,15 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./typography.html">
-                            <i class="material-icons">library_books</i>
-                            <p>Typography</p>
+                        <a href="/casos">
+                            <i class="material-icons">gavel</i>
+                            <p>Casos de corrupción</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./maps.html">
-                            <i class="material-icons">location_on</i>
-                            <p>Maps</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="./notifications.html">
-                            <i class="material-icons text-gray">notifications</i>
-                            <p>Notifications</p>
+                        <a href="/medios">
+                            <i class="material-icons">web</i>
+                            <p>Medios</p>
                         </a>
                     </li>
                     <li class="active-pro">
