--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -19,6 +19,13 @@
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+    <style type="text/css">
+      #graph {
+        max-width: 1920px;
+        height: 400px;
+        margin: auto;
+      }
+    </style>
 </head>
 
 <body>
@@ -151,9 +158,9 @@
                                 -->
                             </ul>
                         </div>
+                        <br>
                         <!-- Line chart -->
-                        <div class="col-lg-12">
-                            <canvas id="myChart" width="100%" height="400"></canvas>
+                        <div id="graph">
                         </div>
 
                     </div>
@@ -589,6 +596,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
 <script src="/js/chartist.min.js"></script>
 <script src="/js/utils.js"></script>
+<script src="/js/sigma.min.js"></script>
+<script src="/js/sigma.parsers.json.min.js"></script>
 <!--  Dynamic Elements plugin -->
 <script src="/js/arrive.min.js"></script>
 <!--  PerfectScrollbar Library -->
@@ -603,82 +612,14 @@
 <script src="/js/demo.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
-
-        // Javascript method's body can be found in assets/js/demos.js
-        demo.initDashboardPageCharts();
-
-        var config = {
-            type: 'line',
-            data: {
-                // TODO: poner años programatically
-                labels: ["Enero/16", "Febrero/16", "Marzo/16", "Abril/16", "Mayo/16", "Junio/16", "Julio/16", "Agosto/16", "Septiembre/16", "Octubre/16", "Noviembre/16", "Diciembre/16", "Enero/17", "Febrero/17", "Marzo/17", "Abril/17", "Mayo/17", "Junio/17", "Julio/17", "Agosto/17", "Septiembre/17", "Octubre/17", "Noviembre/17", "Diciembre/17"],
-                datasets: [{
-                    label: "Sentimientos negativos",
-                    lineTension: 0,
-                    backgroundColor: window.chartColors.red,
-                    borderColor: window.chartColors.red,
-                    data: [
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()
-                    ],
-                    fill: false,
-                }, {
-                    label: "Sentimientos positivos",
-                    lineTension: 0,
-                    fill: false,
-                    backgroundColor: window.chartColors.green,
-                    borderColor: window.chartColors.green,
-                    data: [
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()
-                    ],
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                title:{
-                    display:true,
-                    text:'Comentarios'
-                },
-                tooltips: {
-                    mode: 'index',
-                    intersect: false,
-                },
-                hover: {
-                    mode: 'nearest',
-                    intersect: true
-                },
-                scales: {
-                    xAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'Month'
-                        }
-                    }],
-                    yAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'Value'
-                        }
-                    }]
-                }
+        sigma.parsers.json('/js/data.json', {
+            container: 'graph',
+            settings: {
+              defaultNodeColor: '#ec5148',
+              labelThreshold: 0
             }
-        };
-
-        var ctx = document.getElementById("myChart").getContext("2d");
+        });
+        /*var ctx = document.getElementById("myChart").getContext("2d");
         window.myLine = new Chart(ctx, config);
 
         $("#lideres > li > a").on('click', function (evt) {
@@ -697,9 +638,11 @@
             var lider = $(this).text();
             $("#dropdown-title").text(lider + " ");
             $("#dropdown-title").append('<b class="caret"></b>');
-        });
+        });*/
 
     });
 </script>
-
+<script type="text/javascript">
+    
+</script>
 </html>
