--- a/views/lideres.ejs
+++ b/views/lideres.ejs
@@ -136,7 +136,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-3 dropdown">
-                            <a id="dropdown-title" href="#" class="btn-simple dropdown-toggle" data-toggle="dropdown">
+                            <a id="dropdown-title" href="#" class="btn dropdown-toggle" data-toggle="dropdown">
                                 <!-- TODO: reemplazar por el primero en orden alfabetico (con ejs) -->
                                 <% if (lideres.length > 0) { %>
                                 <%= lideres[0].friendly_name %>
@@ -157,11 +157,13 @@
                                 -->
                             </ul>
                         </div>
+
+                    </div>
+                    <div class="row">
                         <!-- Line chart -->
                         <div class="col-lg-12">
                             <canvas id="myChart" width="100%" height="400"></canvas>
                         </div>
-
                     </div>
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-6">
@@ -774,8 +776,6 @@
 
                 window.myLine.update();
             });
-            // Dummy code
-
 
             // TODO: traer los datos de la persona que fue clicked
 
