--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -30,6 +30,7 @@
         padding-right: 0 !important;
       }
     </style>
+    <link href="/css/" rel="stylesheet"/>
 </head>
 
 <body>
@@ -239,6 +240,8 @@
 <script src="/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/js/material.min.js" type="text/javascript"></script>
+<!-- Vis.js plugin-->
+<script src="/js/vis.min.js"></script>
 <!--  Charts Plugin -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
 <script src="/js/chartist.min.js"></script>
