--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -30,7 +30,7 @@
         padding-right: 0 !important;
       }
     </style>
-    <link href="/css/" rel="stylesheet"/>
+    <link href="/css/vis.min.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -264,133 +264,46 @@
 <script src="/js/demo.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
-        //demo.initDashboardPageCharts();
-        var s = null;
-        var sigmaSettings = {
-          defaultNodeColor: '#0033cc',
-          labelThreshold: 0,
-          maxNodeSize: 20,
-          autoRescale: false,
-          //rescaleIgnoreSize: true,
-          minEdgeSize: 20,
-          maxEdgeSize: 20
-          //nodesPowRatio: 2,
-          /*zoomingRatio: 1,
-          doubleClickEnabled: false,
-          mouseWheelEnabled: false,
-          zoomMin: 0.0625,
-          zoomMax: 0.0625*/
-        };
-
         var today = new Date();
         //console.log("month", );
         //console.log("year", );
         function getAssocs(type, year, month) {
             $.get("/summary/assocs/" + year + "/" + month + "/" + type, function (data) {
-                console.log(data);
-                if (s) {
-
-                    /*//s.graph.clear();
-                    //this gets rid of any methods you've attached to s.
-                    if (s.isForceAtlas2Running()) {
-                        s.stopForceAtlas2();
+                //console.log(data);
+                // create a network
+                var container = document.getElementById('graph');
+                /*var data = {
+                    nodes: nodes,
+                    edges: edges
+                };*/
+                var options = {
+                    nodes: {
+                        shape: 'dot',
+                        size: 30,
+                        font: {
+                            size: 32,
+                        },
+                        borderWidth: 2
+                    },
+                    edges: {
+                        width: 2,
+                        smooth: {
+                            type:'dynamic'
+                        },
+                        arrows: 'to'
+                    },
+                    physics: {
+                        /*stabilization: {
+                            enabled: true,
+                            //iterations: 3000
+                        }*/
+                        stabilization: false
+                    },
+                    layout: {
+                        improvedLayout: false
                     }
-                    if (s.isNoverlapRunning()) {
-                        s.stopNoverlap();
-                    }
-                    sigma.plugins.killDragNodes(sigInst);
-                    //s.refresh();*/
-                    //s.graph.kill();
-                    s = null;
-                    $("#graph").empty();
-                    $("#graph-container").html('<div id="graph"></div>');
-                }
-                
-                s = new sigma({
-                    graph: data,
-                    container: 'graph',
-                    settings: sigmaSettings
-                });
-
-
-                // Drag nodes
-                var dragListener = new sigma.plugins.dragNodes(s, s.renderers[0]);
-
-                //s.stopForceAtlas2();
-                // TODO: get back to this (layout, no overlapping)
-                // Noverlap //
-                var config = {
-                  nodeMargin: 1.0,
-                  //scaleNodes: 10.0,
-                  gridSize: 20
-                  //speed: 5
-                  //permittedExpansion: 3
                 };
-
-                // Configure Noverlap
-                var listener = s.configNoverlap(config);
-                listener.bind('stop', function(event) {
-                    console.log("called")
-                });
-                s.startNoverlap();
-
-                // Start ForceAtlas2
-                s.startForceAtlas2({
-                    //barnesHutOptimize: false,
-                    //scalingRatio: 1.5,
-                    //linLogMode: true,
-                    //startingIterations: 500,
-                    //edgeWeightInfluence: 1,
-                    //strongGravityMode: true,
-                    slowDown: 5,
-                    adjustSizes: false
-                });
-                setTimeout(function () {
-                    if (s.isForceAtlas2Running()) {
-                        s.stopForceAtlas2();
-                    }
-                }, 3000);
-
-                // Bind all events:
-                
-                /*sigma.parsers.json('/js/data.all.0.json', {
-                    container: 'graph',
-                    settings: {
-                      defaultNodeColor: '#ec5148',
-                      labelThreshold: 0,
-                      maxNodeSize: 20
-                    }
-                }, function (s) { // This function is passed an instance of sigma
-                        console.log("Callback called")
-                        var config = {
-                          nodeMargin: 3.0,
-                          scaleNodes: 1.3
-                        };
-
-                        // Configure the algorithm
-                        var listener = s.configNoverlap(config);
-
-                        // Bind all events:
-                        listener.bind('start stop interpolate', function(event) {
-                        });
-
-                        var dragListener = new sigma.plugins.dragNodes(s, s.renderers[0]);
-
-
-                        // Start the algorithm:
-                        s.startNoverlap();
-                        s.startForceAtlas2({
-                            //barnesHutOptimize: false
-                            //scalingRatio: 50
-                            //linLogMode: true
-                        });
-                        setTimeout(function () {
-                            if (s.isForceAtlas2Running()) {
-                                s.stopForceAtlas2();
-                            }
-                        }, 3000);
-
-                    });*/
+                network = new vis.Network(container, data, options);
             });
         }
 
