--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -98,7 +98,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <!-- TODO: cambiar titulo -->
-                        <a class="navbar-brand" href="#"> Material Dashboard </a>
+                        <a class="navbar-brand" href="#"> Sentinel </a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
@@ -202,6 +202,7 @@
                 <div class="container-fluid">
                     <nav class="pull-left">
                         <ul>
+                        <!--
                             <li>
                                 <a href="#">
                                     Home
@@ -222,6 +223,7 @@
                                     Blog
                                 </a>
                             </li>
+                        -->
                         </ul>
                     </nav>
                     <p class="copyright pull-right">
