Display activity summary casos corrupcion

--- a/views/lideres.ejs
+++ b/views/lideres.ejs
@@ -621,7 +621,6 @@
                 <% }
                 }
             %>
-            
         ];
         // Javascript method's body can be found in assets/js/demos.js
         demo.initDashboardPageCharts();
@@ -727,14 +726,14 @@
                         display: true,
                         scaleLabel: {
                             display: true,
-                            labelString: 'Month'
+                            labelString: 'Tiempo'
                         }
                     }],
                     yAxes: [{
                         display: true,
                         scaleLabel: {
                             display: true,
-                            labelString: 'Value'
+                            labelString: 'Valor'
                         }
                     }]
                 }
