--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -164,6 +164,23 @@
                                 -->
                             </ul>
                         </div>
+                        <div class="col-md-3 dropdown">
+                            <a id="dropdown-title" href="#" class="btn-simple dropdown-toggle" data-toggle="dropdown">
+                                <!-- TODO: reemplazar por el primero en orden alfabetico (con ejs) -->
+                                Publicaciones
+                                <b class="caret"></b>
+                            </a>
+                            <ul id="dropdown" class="dropdown-menu">
+                                <li><a id="posts" href="#">Publicaciones</a></li>
+                                <li><a id="comments" href="#">Comentarios</a></li>
+                                <!--
+                                <li class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">One more separated link</a></li>
+                                -->
+                            </ul>
+                        </div>
                     </div>
                     <div id="graph-container" class="row nopadding">
                         <!--
