--- a/views/medios.ejs
+++ b/views/medios.ejs
@@ -138,15 +138,15 @@
                         <div class="col-md-3 dropdown">
                             <a id="dropdown-title" href="#" class="btn-simple dropdown-toggle" data-toggle="dropdown">
                                 <!-- TODO: reemplazar por el primero en orden alfabetico (con ejs) -->
-                                <% if (lideres.length > 0) { %>
-                                <%= lideres[0].friendly_name %>
+                                <% if (medios.length > 0) { %>
+                                <%= medios[0].friendly_name %>
                                 <% } %>
                                 <b class="caret"></b>
                             </a>
-                            <ul id="lideres" class="dropdown-menu">
-                                <% if (lideres.length > 0) { %>
-                                <% lideres.forEach(function (lider) { %>
-                                    <li><a id="<%= lider._id %>" href="#"><%= lider.friendly_name %></a></li>
+                            <ul id="medios" class="dropdown-menu">
+                                <% if (medios.length > 0) { %>
+                                <% medios.forEach(function (medio) { %>
+                                    <li><a id="<%= medio._id %>" href="#"><%= medio.friendly_name %></a></li>
                                 <% }) %>
                                 <% } %>
                                 <!--
@@ -608,139 +608,15 @@
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
 <script src="/js/demo.js"></script>
 <script type="text/javascript">
-    $(document).ready(function() {
-        var monthlyLabels = [
-            <% for (var i = 0; i < summary.monthLabels.length; i++) {
-                if (i != summary.monthLabels.length -1) { %>
-                    "<%= summary.monthLabels[i] %>",
-                <% }
-                   else { %>
-                    "<%= summary.monthLabels[i] %>"
-                <% }
-                }
-            %>
-            
-        ];
+    $(document).ready(function() { 
         // Javascript method's body can be found in assets/js/demos.js
         demo.initDashboardPageCharts();
 
-        var config = {
-            type: 'line',
-            data: {
-                // TODO: poner años programatically
-                /*labels: ["Enero/16", "Febrero/16", "Marzo/16", "Abril/16", "Mayo/16", "Junio/16", "Julio/16", "Agosto/16", "Septiembre/16", "Octubre/16", "Noviembre/16", "Diciembre/16", "Enero/17", "Febrero/17", "Marzo/17", "Abril/17", "Mayo/17", "Junio/17", "Julio/17", "Agosto/17", "Septiembre/17", "Octubre/17", "Noviembre/17", "Diciembre/17"],*/
-                labels: monthlyLabels,
-                datasets: [{
-                    label: "Sentimientos negativos",
-                    lineTension: 0,
-                    backgroundColor: window.chartColors.red,
-                    borderColor: window.chartColors.red,
-                    data: [
-                        <% for (var i = 0; i < summary.monthLabels.length; i++) {
-                            if (i != summary.monthLabels.length -1) { %>
-                                "<%= summary.monthSummaries[i].negative %>",
-                            <% }
-                               else { %>
-                                "<%= summary.monthSummaries[i].negative %>"
-                            <% }
-                            }
-                        %>
-                        /*randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()*/
-                    ],
-                    fill: false,
-                }, {
-                    label: "Sentimientos positivos",
-                    lineTension: 0,
-                    fill: false,
-                    backgroundColor: window.chartColors.green,
-                    borderColor: window.chartColors.green,
-                    data: [
-                        <% for (var i = 0; i < summary.monthLabels.length; i++) {
-                            if (i != summary.monthLabels.length -1) { %>
-                                "<%= summary.monthSummaries[i].positive %>",
-                            <% }
-                               else { %>
-                                "<%= summary.monthSummaries[i].positive %>"
-                            <% }
-                            }
-                        %>
-                        /*randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()*/
-                    ],
-                }, {
-                    label: "Sentimientos neutros",
-                    hidden: true,
-                    lineTension: 0,
-                    fill: false,
-                    backgroundColor: window.chartColors.blue,
-                    borderColor: window.chartColors.blue,
-                    data: [
-                        <% for (var i = 0; i < summary.monthLabels.length; i++) {
-                            if (i != summary.monthLabels.length -1) { %>
-                                "<%= summary.monthSummaries[i].neutral %>",
-                            <% }
-                               else { %>
-                                "<%= summary.monthSummaries[i].neutral %>"
-                            <% }
-                            }
-                        %>
-                        /*randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()*/
-                    ],
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                title:{
-                    display:true,
-                    text:'Comentarios'
-                },
-                tooltips: {
-                    mode: 'index',
-                    intersect: false,
-                },
-                hover: {
-                    mode: 'nearest',
-                    intersect: true
-                },
-                scales: {
-                    xAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'Month'
-                        }
-                    }],
-                    yAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'Value'
-                        }
-                    }]
-                }
-            }
-        };
+        // TODO: poner años programatically
+        /*labels: ["Enero/16", "Febrero/16", "Marzo/16", "Abril/16", "Mayo/16", "Junio/16", "Julio/16", "Agosto/16", "Septiembre/16", "Octubre/16", "Noviembre/16", "Diciembre/16", "Enero/17", "Febrero/17", "Marzo/17", "Abril/17", "Mayo/17", "Junio/17", "Julio/17", "Agosto/17", "Septiembre/17", "Octubre/17", "Noviembre/17", "Diciembre/17"],*/
 
         var ctx = document.getElementById("myChart").getContext("2d");
-        window.myLine = new Chart(ctx, config);
+        //window.myLine = new Chart(ctx, config);
 
         $("#lideres > li > a").on('click', function (evt) {
             var entity = $(this).attr('id');
